--- a/partials/edit.html
+++ b/partials/edit.html
@@ -1,7 +1,7 @@
 
 <aside id="palette" ng-if="palette_visible" class="module_wrapper zoom_fade">
   <div ng-click="togglePanel()" class="module_fader"></div>
-  <div ng-include src="&quot;partials/panel.html&quot;" class="module editor"></div>
+  <div ng-include="&quot;partials/panel.html&quot;" class="module editor"></div>
 </aside>
 <nav class="breadcrumbs"><a href="#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations" ng-show="currentStep==0" class="btn soft left"><i class="icon-cancel"></i></a>
   <button ng-click="retreatStep()" ng-show="currentStep&gt;=1" class="btn soft left"><i class="icon-left-open"></i></button>
