--- a/css/app.css
+++ b/css/app.css
@@ -7,11 +7,17 @@ html, body {
 }
 
 body {
+  font-size: 16px;
   overflow: hidden;
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   background-size: 100% 100%;
   font-weight: 300;
   -webkit-tap-highlight-color: rgba(201, 224, 253, 0);
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  -webkit-touch-callout: none;
 }
 
 a {
@@ -36,6 +42,7 @@ li > a {
 i {
   font-weight: normal;
   font-style: normal;
+  font-size: 1rem;
 }
 
 ul, ol {
@@ -70,7 +77,7 @@ dd:after {
   z-index: 50;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.56);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .dimmer.ng-enter,
@@ -145,7 +152,6 @@ dd:after {
   z-index: 100;
   position: absolute;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
-  border-left: 1px solid #cccdcc;
   
   -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -165,8 +171,8 @@ dd:after {
 .sidebar {
   position: absolute;
   padding-left: 10px;
-  padding-top: 20%;
-  width: 200px;
+  padding-top: 3.5em;
+  width: 80%;
   height: 100%;
   overflow-y: scroll;
   top: 0;
@@ -192,8 +198,6 @@ dd:after {
   width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  
-
 }
 
 .scroller {
@@ -213,12 +217,12 @@ dd:after {
 
 .app_header {
   position: absolute;
-  background-color: #f8f9f8;
+  background-color: #fffffe;
   width: 100%;
   height: 3em;
   z-index: 700;
   top: 0px;
-  color: #83949e;
+  color: #b6b6b6;
   border-bottom: 1px solid #e2e3e2;
 }
 
@@ -253,8 +257,9 @@ dd:after {
   text-align: center;
   font-size: 1em;
   text-overflow: ellipsis;
-  color: #3e3e3e;
+  color: #969696;
   line-height: 3em;
+  font-weight: 400;
 }
 
 .app_header hgroup h1 {
@@ -266,7 +271,7 @@ dd:after {
   text-align: center;
   font-size: .7em;
   margin: .6em 0 -.3em;
-  color: #a2acb2;
+  color: #c0c8cd;
 }
 
 .app_header small {
@@ -356,8 +361,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header .btn {
-  padding: 2px 10px;
   font-size: .8em;
+  height: 3em;
+}
+
+header .btn.right {
+  padding-right: 1em;
 }
 
 .btnset {
@@ -444,9 +453,14 @@ header .btn {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+.btnset.action .btn:last-of-type {
+  border-left: 1px solid #cbcbcb;
+}
+
 .btn.positive {
-  color: #2c92d8;
+  color: #70b726;
   border-right: none;
+  border-left: 1px solid #cbcbcb;
 }
 
 .crumb:last-of-type {
@@ -624,22 +638,18 @@ nav {
 }
 
 .tag {
-  padding: .1em 1.8em .1em .8em;
-  border: 1px solid #c8c8c8;
-  border-radius: 4px;
-  margin: 0 4px;
-  background-color: #ffffff;
+  padding: 0 1.8em 0 .8em;
+  border: 1px solid #dbdbdb;
+  border-radius: .4em;
+  margin: 0 4px 0 0;
+  background-color: #f0f0f0;
   position: relative;
   
   height: 26px;
-  line-height: 23px;
-  font-size: 12px;
+  line-height: 2em;
+  font-size: .8em;
   color: #809195;
   text-decoration: none;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #dadada #d2d2d2 #c5c5c5;
-  border-radius: 20px;
   
 }
 
@@ -686,13 +696,16 @@ nav {
 }
 
 .conversations {
-  padding: 10px 0;
+  padding: 0 0 10px 0;
+  background: #ababab;
 }
 
-.instance {
-  margin: 10px 10px 30px;
-  border: 2px solid #e6e7e6;
+.instance.card {
+  margin: 10px 0px 10px;
   background-color: #ffffff;
+  border: none;
+  border-radius: 0;
+  box-shadow: 0 3px 1px -1px rgba(0, 0, 0, 0.18);
 }
 
 .instance.card:first-of-type {
@@ -725,16 +738,12 @@ nav {
   font-size: 1.1em;
 }
 
-.instance time {
+.comment time {
   font-size: .8em;
   font-weight: 300;
   color: #6c6c6c;
   font-style: italic;
   display: block;
-}
-
-.instance .comment time {
-  display: inline-block;
 }
 
 .expand_wrapper {
@@ -1099,11 +1108,9 @@ fieldset.padded {
 
 .comments {
   list-style: none;
-  font-size: 1em;
-}
-
-.comment_wrapper {
-  padding: 10px 0 0;
+  font-size: .9em;
+  background-color: #f9f9f9;
+  padding: 10px;
 }
 
 .comment_wrapper > * {
@@ -1112,22 +1119,28 @@ fieldset.padded {
 }
 
 .comments li .profile_pic {
-  width: 30px;
-  height: 30px;
-  margin: 5px 10px;
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0 20px 0 10px;
 }
 
 .comments p {
-  margin-top: 0;
+  margin: 0;
+  font-weight: 300;
+  display: inline;
 }
 
 .comments h4 {
   margin-bottom: 0;
+  font-weight: 400;
+  display: inline;
+  vertical-align: top;
 }
 
-.comments h4 time {
+.comments time {
   font-size: .8em;
   color: inherit;
+  display: block;
 }
 
 .comment_wrapper {
@@ -1140,6 +1153,15 @@ fieldset.padded {
 
 .comment {
   position: relative;
+  margin: 20px 0;
+}
+
+.comment:first-of-type {
+  margin-top: 10px;
+}
+
+.comment:last-of-type {
+  margin-bottom: 10px;
 }
 
 .comment .btn.heard {
@@ -1247,7 +1269,7 @@ fieldset.padded {
 
 .app_header .btn.primary {
   background-color: #ffffff;
-  color: #54616a;
+  color: #9faab2;
   border-color: #54616a;
   margin: .2em 0;
   font-size: 1.5em;
@@ -1257,6 +1279,10 @@ fieldset.padded {
   -ms-transition: all 200ms ease-in-out;
   -o-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
+}
+
+.app_header .btn {
+  color: inherit;
 }
 
 .edit_header {
@@ -1367,7 +1393,7 @@ fieldset.padded {
 }
 
 .module_fader {
-  background-color: rgba(255, 255, 255, 0.86);
+  background-color: rgba(255, 255, 255, 0.95);
   width: 100%;
   position: absolute;
   top: 0;
@@ -1378,7 +1404,7 @@ fieldset.padded {
 .module {
   width: 100%;
   position: relative;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(243, 244, 246);
   margin: 4em auto;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -1388,12 +1414,25 @@ fieldset.padded {
   border-right: none;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.06);
   
+  border: 1px solid #c9cac9;
+  border-radius: 3px;
+  
   z-index: 10;
 }
 
 .module header {
-  padding: 1em;
+  padding: .7em;
   text-align: center;
+  font-size: .9em;
+  color: #a9a9a9;
+  text-transform: uppercase;
+  background-color: #f6f6f6;
+  font-weight: 400;
+  border-radius: 3px 3px 0 0;
+}
+
+.module h1 {
+  font-weight: 300;
 }
 
 .blur {
@@ -1443,17 +1482,195 @@ label {
 
 input[type=text], input[type=email], input[type=number], input[type=date], input[type=time], input[type=password], textarea {
   padding: 1em;
-  margin: 14px 0;
+  margin: 1em 0;
   display: block;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #cccccc;
-  border-radius: 4px;
   border-radius: 0;
   background: inherit;
   outline: none;
+}
+
+.module fieldset {
+  margin: .5em 0;
+}
+
+.module .btnset.action {
+  margin-top: 0em;
+  border-top: 1px solid #cbcccb;
+  background-color: #ffffff;
+  border-radius: 3px;
+}
+
+.select {
+  display: block;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #cccccc;
+  border-style: solid none;
+  background: inherit;
+  outline: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.select .option {
+  padding: 1em;
+  border-bottom: 1px solid #ccc;
+  background-color: #ffffff;
+}
+
+.select.expandable {
+  position: relative;
+  height: 3.4em;
+  border: none;
+}
+
+.module label {
+  padding: 0 1em;
+}
+
+.module input {
+  border-style: solid none;
+  margin: 0;
+  background-color: #ffffff;
+}
+
+.select.expandable .status i {
+  padding: 1em;
+  z-index: 21;
+  position: absolute;
+  margin-right: 0;
+  right: 0;
+  border: none;
+}
+
+.select.expandable .option {
+  background-color: #6d7687;
+  color: #f4f4f4;
+  border-bottom: 1px solid #5b626f;
+  border-left: 3px solid #343434;
+}
+
+.select.expandable i {
+  border: 2px solid rgba(255, 255, 255, 0.73);
+  border-radius: 2rem;
+  padding: .1em;
+  margin-right: 1rem;
+}
+
+.select.expandable .selection i {
+  border: 1px solid #666766;
+  display: none;
+}
+
+.select.expandable .selection.highlighted i, .select.expandable .selection.pristine i {
+  color: transparent;
+}
+
+.select.expandable .option i {
+  color: transparent;
+}
+
+.select.expandable .option.selected i {
+  color: white;
+}
+
+.select.expandable .options {
+  position: absolute;
+  left: -5%;
+  width: 110%;
+  z-index: 30;
+  box-shadow: 0 0 20px #ffffff;
+  opacity: 1;
+}
+
+.select.expandable .selection {
+  border: 1px solid #ccc;
+  border-style: solid none;
+  padding: 1em;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 20;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.select.expandable .selection.highlighted {
+  opacity: .4;
+}
+
+.select_dropdown {
+  top: 3em;
+}
+
+.select_dropdown.ng-enter,
+.select_dropdown.ng-leave {
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.select_dropdown.ng-enter,
+.select_dropdown.ng-leave.ng-leave-active {
+  top: 1em;
+  opacity: 0;
+  transform: scale(.9);
+  -webkit-transform: scale(.9);
+}
+
+.select_dropdown.ng-leave,
+.select_dropdown.ng-enter.ng-enter-active {
+  top: 3em;
+  opacity: 1;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+}
+
+.select .option > i {
+  font-size: .8em;
+  margin-right: 1rem;
+}
+
+i.bg {
+  padding: .2rem;
+  background-color: #999999;
+  color: rgb(255, 255, 255);
+  border-radius: .3rem;
+}
+
+.bg.green {
+  background-color: #9cc374;
+}
+
+.bg.orange {
+  background-color: #f49f22;
+}
+
+.module .select {
+  border-bottom: none;
+}
+
+.select .option:last-of-type {
+  border-bottom: none;
 }
 
 input[type=text]:focus, input[type=email]:focus, input[type=number]:focus, input[type=date]:focus, input[type=time]:focus, input[type=password]:focus, textarea:focus {
@@ -1603,13 +1820,17 @@ textarea {
 
 .card {
   background-color: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.13);
+  border: 1px solid rgba(0, 0, 0, 0.29);
   border-radius: 6px;
 }
 
 .card.padded {
   padding: 10px;
   margin: 10px;
+}
+
+.content_wrapper.padded {
+  padding: 10px;
 }
 
 .push_left {
@@ -1754,12 +1975,13 @@ input.object-list-search:focus {
   .main_view {
     box-shadow: none;
     margin-left: 0px;
-    border-left: 1px solid #e5e6e5;
+    border-left: 1px solid #cccdcc;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     position: relative;
     width: 100%;
+    
   }
   
   .main_wrapper {
@@ -1786,7 +2008,7 @@ input.object-list-search:focus {
   }
   
   .module {
-    width: 320px;
+    width: 80%;
     border: 1px solid #c9cac9;
     border-radius: 3px;
   }
@@ -1799,6 +2021,10 @@ input.object-list-search:focus {
     padding-right: 200px;
   }
   
+  .conversations {
+    padding-top: 20px;
+  }
+  
   .instance.card {
     padding: 1em 1.5em;
     margin: 2em;
@@ -1807,4 +2033,14 @@ input.object-list-search:focus {
   .instance.card:first-of-type {
     margin-top: 1em;
   }
+  
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5) {
+
+  .app_header {
+    border: none;
+    box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.37);
+  }
+
 }
