--- a/css/fontello-9444168f/css/fontello-codes.css
+++ b/css/fontello-9444168f/css/fontello-codes.css
@@ -1,27 +1,28 @@
 
-.icon-plus:before { content: '\e807'; } /* '' */
-.icon-at:before { content: '\e815'; } /* '' */
-.icon-home:before { content: '\e80b'; } /* '' */
 .icon-star:before { content: '\e80a'; } /* '' */
-.icon-star-empty:before { content: '\e809'; } /* '' */
-.icon-pencil:before { content: '\e803'; } /* '' */
-.icon-ok:before { content: '\e800'; } /* '' */
-.icon-cancel:before { content: '\e80f'; } /* '' */
-.icon-cog:before { content: '\e818'; } /* '' */
-.icon-down-open:before { content: '\e806'; } /* '' */
-.icon-up-open:before { content: '\e805'; } /* '' */
-.icon-right-open:before { content: '\e80e'; } /* '' */
-.icon-left-open:before { content: '\e80d'; } /* '' */
-.icon-menu:before { content: '\e801'; } /* '' */
-.icon-data-science:before { content: '\e814'; } /* '' */
-.icon-data-science-inv:before { content: '\e813'; } /* '' */
-.icon-paper-plane:before { content: '\e811'; } /* '' */
-.icon-reply:before { content: '\e802'; } /* '' */
-.icon-chat:before { content: '\e819'; } /* '' */
+.icon-spinner2:before { content: '\e816'; } /* '' */
 .icon-user:before { content: '\e80c'; } /* '' */
 .icon-users:before { content: '\e810'; } /* '' */
-.icon-inbox:before { content: '\e808'; } /* '' */
-.icon-trophy:before { content: '\e817'; } /* '' */
+.icon-menu:before { content: '\e801'; } /* '' */
+.icon-ok:before { content: '\e800'; } /* '' */
+.icon-cancel:before { content: '\e80f'; } /* '' */
+.icon-plus:before { content: '\e807'; } /* '' */
+.icon-home:before { content: '\e80b'; } /* '' */
+.icon-reply:before { content: '\e802'; } /* '' */
+.icon-pencil:before { content: '\e803'; } /* '' */
 .icon-export:before { content: '\e804'; } /* '' */
+.icon-chat:before { content: '\e819'; } /* '' */
+.icon-star-empty:before { content: '\e809'; } /* '' */
+.icon-down-open:before { content: '\e806'; } /* '' */
+.icon-left-open:before { content: '\e80d'; } /* '' */
+.icon-right-open:before { content: '\e80e'; } /* '' */
+.icon-up-open:before { content: '\e805'; } /* '' */
+.icon-trophy:before { content: '\e817'; } /* '' */
+.icon-data-science:before { content: '\e814'; } /* '' */
+.icon-data-science-inv:before { content: '\e813'; } /* '' */
+.icon-inbox:before { content: '\e808'; } /* '' */
+.icon-flash:before { content: '\e81a'; } /* '' */
+.icon-paper-plane:before { content: '\e811'; } /* '' */
 .icon-chart-bar:before { content: '\e812'; } /* '' */
-.icon-spinner2:before { content: '\e816'; } /* '' */
+.icon-at:before { content: '\e815'; } /* '' */
+.icon-cog:before { content: '\e818'; } /* '' */
