--- a/jade_partials/dashboard.html.jade
+++ b/jade_partials/dashboard.html.jade
@@ -1,28 +1,58 @@
 .module_wrapper.zoom_fade(ng-if='new_mode')
   .module_fader.dimmer(ng-click='toggleNewMode()')
-  form.module.slide_down(ng-if='new_mode', ng-submit='createCampaign(new_campaign_title, handle_to_use, is_local, new_campaign_locale, discoverable)')
+  .module(ng-if='new_mode')
     header
       h1 Create new campaign
-    .content_wrapper
-      label(for='campaign_text')
-      input#campaign_text(type='text', name='new_campaign_title', placeholder='Campaign Title', ng-model='new_campaign_title')
-      .duplicate(ng-if="duplicate_mode")
-        label or duplicate an existing campaign:
-        select(ng-model="campaign_to_duplicate", ng-options="campaign.id as campaign.title for campaign in campaignTitleList")
-      label(for='handle_to_use') Choose a handle:
-      select(id='handle_to_use',ng-model='handle_to_use', ng-options="handle.id as handle.text for handle in handleList")
-      
-    .btnset.two_btns(ng-if="!duplicate_mode")
-      button.btn(ng-click='toggleNewMode()', type='button') cancel
-      button.btn.positive(type='submit', ng-click='resetStep()') Continue
-    .btnset.two_btns(ng-if="duplicate_mode")
-      button.btn(ng-click='toggleNewMode()', type='button') cancel
-      button.btn.positive(type='button', ng-click='duplicateCampaign(new_campaign_title, campaign_to_duplicate, handle_to_use)') Duplicate 
+    .content_wrapper(ng-switch on="new_mode_step")
+      .step_one(ng-switch-when='one')
+        ul.select
+          li.option(ng-click='chooseToDuplicate(false)')
+            i.icon-spinner2.bg.green
+            | Create New
+          li.option(ng-click='chooseToDuplicate(true); duplicate_mode = true')
+            i.icon-flash.bg.orange
+            | Duplicate Existing 
+      .step_two.fade(ng-switch-when='two')  
+        fieldset.duplicate(ng-if='duplicate_mode')
+          .select.expandable(ng-click='toggleCampaignSelector()')
+            .status.push_right
+              i.icon-down-open(ng-show='!show_campaign_options')
+              i.icon-up-open(ng-show='show_campaign_options')
+            .selection(ng-class='{highlighted : show_campaign_options, pristine : !campaign_to_duplicate}')
+              i.icon-ok
+              span(ng-if='campaign_to_duplicate', ng-bind='campaign_to_duplicate.title')
+              span(ng-if='!campaign_to_duplicate') Choose a campaign
+            ul.options.select_dropdown(ng-if='show_campaign_options')
+              li.option(ng-repeat='campaign in campaignTitleList', ng-click='selectCampaignToDuplicate(campaign)', ng-class='{selected : campaign_to_duplicate.id == campaign.id}')
+                i.icon-ok
+                span(ng-bind='campaign.title')
+        fieldset
+          input(type='text', placeholder='Type a title for the new campaign', ng-model='new_campaign_title')
+        fieldset  
+          .select.expandable(ng-click='toggleHandleSelector()')
+            .status.push_right
+              i.icon-down-open(ng-show='!show_handle_options')
+              i.icon-up-open(ng-show='show_handle_options')
+            .selection(ng-class='{highlighted : show_handle_options, pristine : !handle_to_use}')
+              i.icon-ok
+              span(ng-if='handle_to_use', ng-bind='handle_to_use.text')
+              span(ng-if='!handle_to_use.text') Choose a handle
+            ul.options.select_dropdown(ng-if='show_handle_options')
+              li.option(ng-repeat='handle in handleList', ng-click='selectHandleToUse(handle)', ng-class='{selected : handle_to_use.id == handle.id}')
+                i.icon-ok
+                span(ng-bind='handle.text')
+        .btnset.action.two_btns(ng-if="!duplicate_mode")
+          button.btn(ng-click='toggleNewMode()', type='button') cancel
+          button.btn.positive(type='submit', ng-click='createCampaign(new_campaign_title, handle_to_use.id, is_local, new_campaign_locale, discoverable)') Continue
+        .btnset.action.two_btns(ng-if="duplicate_mode")
+          button.btn(ng-click='toggleNewMode()', type='button') cancel
+          button.btn.positive(type='button', ng-click='duplicateCampaign(new_campaign_title, campaign_to_duplicate.id, handle_to_use.id)') Duplicate 
 header.app_header
-  a.left.icon.navicon-button.larr(ng-class='{open : sidebar_visible}', ng-click='toggleSidebar(\'right\')')
-    .navicon
+  button.btn.icon.left.hide_large(ng-click='toggleSidebar(\'right\')')
+    i.icon-menu
   h1.center(ng-bind='accountId')
-  button.btn.right.circled.icon(ng-click='edit_mode || toggleNewMode()', ng-if='!new_mode', ng-hide='edit_mode', ng-class='{disabled: edit_mode}') +
+  button.btn.right.icon(ng-click='edit_mode || toggleNewMode()', ng-if='!new_mode', ng-hide='edit_mode', ng-class='{disabled: edit_mode}')
+    .icon-plus
 .scroller_wrapper
   section.scroller
     ul#campaign_list.object-list
