--- a/app.jade
+++ b/app.jade
@@ -56,4 +56,5 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
     script(src='js/angular/appFactories.js', type='text/javascript')
     script(src='js/angular/directives/angular-animate.js', type='text/javascript')
     script(src='js/angular/directives/ui-sortable.js', type='text/javascript')
+    script(src='js/angular/directives/select.js', type='text/javascript')
     script(src='js/angular/directives/angular-ui-router_for-1.2-animations.js', type='text/javascript')
