a few small language-based changes

--- a/app.jade
+++ b/app.jade
@@ -37,7 +37,7 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
             li(ng-click='togglePersonalPages()')
               a(href='#/rewards', ng-click='toggleSidebar()')
                 i.icon-trophy
-                | Rewards
+                | Bonuses
             li(ng-click='togglePersonalPages()')
               a(href='#/history', ng-click='toggleSidebar()')
                 i.icon-chat
