--- a/partials/instance.html
+++ b/partials/instance.html
@@ -17,7 +17,7 @@
   <div class="form_response">
     <div ng-include="&quot;partials/form_completed.html&quot;" class="questions"></div>
     <dl> 
-      <dt>Reward:</dt>
+      <dt>Bonus:</dt>
       <dd>{{instance.reward.title}}<br/><small>claimed on {{instance.reward.date_claimed}}</small></dd>
     </dl>
   </div>
