--- a/jade_partials/campaign_nav.html.jade
+++ b/jade_partials/campaign_nav.html.jade
@@ -10,13 +10,13 @@ nav.campaign_nav.dropdown(ng-if='campaignNav_true', ng-click='toggleNavbar()')
           i.icon-chart-bar
       li(ng-hide='multipleViewCampaigns')
         a(href='#/campaign/{{campaignId}}/edit')
-          | edit
+          | Edit
           i.icon-pencil
       li
         a(href='#/account/{{accountId}}/campaign/{{campaignId}}/rewards')
-          | rewards
+          | Bonuses
           i.icon-trophy
       li
         a(href='#/account/{{accountId}}/campaign/{{campaignId}}/contacts')
-          | contacts
+          | Contacts
           i.icon-at
