--- a/jade_partials/edit.html.jade
+++ b/jade_partials/edit.html.jade
@@ -2,11 +2,10 @@ aside#palette.module_wrapper.zoom_fade(ng-if='palette_visible')
   .module_fader(ng-click='togglePanel()')
   .module.editor(ng-include='"partials/panel.html"')
 nav.breadcrumbs
-  a.btn.soft.left(href='#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations', ng-show='currentStep==0')
+  a.btn.soft.push_left(href='#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations', ng-show='currentStep==0')
     i.icon-cancel
-  button.btn.soft.left(ng-click='retreatStep()', ng-show='currentStep>=1')
+  button.btn.soft.push_left(ng-click='retreatStep()', ng-show='currentStep>=1')
     i.icon-left-open
-  h2 Step {{steps[currentStep]+1}}
   ol.dots.right
     li.dot(ng-class='{selected: currentStep==n}', ng-repeat='n in steps', ng-click='changeStep(n)')
   button.btn.soft.right(ng-click='advanceStep()', ng-hide='currentStep== (steps.length-1)')
@@ -24,7 +23,7 @@ nav.breadcrumbs
           button.middle.confirm.btn(ng-click='togglePanel(\'Create Question\')') + New Question
         div(ng-switch-when='1')
           form(method='post', action='')
-            h3 Reward details:
+            h3 Bonus details:
             label(for='personal_message', ng-model='buildCampaign.message') Create a personal message for the recipient:
             textarea#personal_message(placeholder='(optional)')
             label(for='title') Title:
@@ -54,13 +53,13 @@ nav.breadcrumbs
                 input#sharable_three.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_three')
                 label.inline(for='sharable_three')
                   | three times
-                  small (User may share this reward with up to three (3) contacts.)
+                  small (User may share this bonus with up to three (3) contacts.)
               fieldset
                 input#sharable_any.inline(ng-model='sharability', type='radio', name='sharability', ng-true-value='sharable_any')
                 label.inline(for='sharable_any')
                   | openly sharable
                   small
-                    | (This reward can be shared freely through any means (blogs, social networks, email, etc.)
+                    | (This bonus can be shared freely through any means (blogs, social networks, email, etc.)
         div(ng-switch-when='2')
           ul
             li
