--- a/jade_partials/instance.html.jade
+++ b/jade_partials/instance.html.jade
@@ -13,7 +13,7 @@ article(ng-init='instance.cap = -2')
   .form_response
     .questions(ng-include='"partials/form_completed.html"')
     dl 
-      dt Reward:
+      dt Bonus:
       dd {{instance.reward.title}}
         br
         small claimed on {{instance.reward.date_claimed}}
