--- a/partials/campaign_nav.html
+++ b/partials/campaign_nav.html
@@ -3,8 +3,8 @@
   <ul>
     <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
     <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
-    <li ng-hide="multipleViewCampaigns"><a href="#/campaign/{{campaignId}}/edit">edit<i class="icon-pencil"></i></a></li>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards<i class="icon-trophy"></i></a></li>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts<i class="icon-at"></i></a></li>
+    <li ng-hide="multipleViewCampaigns"><a href="#/campaign/{{campaignId}}/edit">Edit<i class="icon-pencil"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">Bonuses<i class="icon-trophy"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">Contacts<i class="icon-at"></i></a></li>
   </ul>
 </nav>
